--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,11 @@
     <string name="app_name">Gimelגימל</string>
 
     <!--Activities-->
-    <string name="activity_launcher_title">@string/app_name</string>
-    <string name="activity_main_title">@string/app_name</string>
-    <string name="activity_settings_title">SettingsActivity</string>
-    <string name="activity_image_fullscreen_title">ImageFullscreenActivity</string>
-    <string name="activity_action_draw_title">DrawActionActivity</string>
+    <string name="activity_launcher_title" translatable="false">@string/app_name</string>
+    <string name="activity_main_title" translatable="false">@string/app_name</string>
+    <string name="activity_settings_title" translatable="false">SettingsActivity</string>
+    <string name="activity_image_fullscreen_title" translatable="false">ImageFullscreenActivity</string>
+    <string name="activity_action_draw_title" translatable="false">DrawActionActivity</string>
 
     <!--Drawer-->
     <string name="nav_menu_group_title_bubble_layers">Bubble Layers</string>
@@ -15,12 +15,12 @@
 
     <!--General Settings-->
     <string name="pref_header_general">General</string>
-    <string name="pref_header_gps">Gps</string>
+    <string name="pref_header_gps" translatable="false">GPS</string>
     <string name="pref_header_messages">Messages</string>
-    <string name="user_name_text_key">user_name_text</string>
+    <string name="user_name_text_key" translatable="false">user_name_text</string>
     <string name="pref_title_display_name">Display name</string>
     <string name="pref_default_display_name">New Name</string>
-    <string name="validation_error_title">@string/error</string>
+    <string name="validation_error_title" translatable="false">@string/error</string>
     <string name="validation_error_message">Input is not valid. Please try again.</string>
 
     <!--Messages Settings-->
@@ -41,11 +41,11 @@
         <item>360</item>
         <item>-1</item>
     </string-array>
-    <string name="sync_messages_frequency_key">sync_messages_frequency</string>
+    <string name="sync_messages_frequency_key" translatable="false">sync_messages_frequency</string>
 
     <!-- GPS Settings-->
-    <string name="pref_title_gps_availability">Display Gps notifications</string>
-    <string name="pref_title_gps_distance">Gps Distance Notification</string>
+    <string name="pref_title_gps_availability">Display GPS notifications</string>
+    <string name="pref_title_gps_distance">GPS Distance Notification</string>
     <string-array name="pref_sync_gps_distance">
         <item>Any Distance</item>
         <item>5 meters</item>
@@ -62,8 +62,8 @@
         <item>100</item>
         <item>500</item>
     </string-array>
-    <string name="notifications_gps_key">notifications_gps</string>
-    <string name="gps_distance_key">gps_distance</string>
+    <string name="notifications_gps_key" translatable="false">notifications_gps</string>
+    <string name="gps_distance_key" translatable="false">gps_distance</string>
 
     <!--Dialogs-->
     <string name="dialog_message_geo_title">Send coordinates</string>
@@ -93,14 +93,14 @@
     <!--Bottom Panel-->
     <string name="sensors_container_title">Sensors</string>
     <string name="messages_container_title">Messages</string>
-    <string name="bottom_panel_messages_counter">" (%1$d)"</string>
+    <string name="bottom_panel_messages_counter" translatable="false">" (%1$d)"</string>
     <string name="map_entity_details_container_title">"Details: %1$s"</string>
     <string name="vector_layer_title_prefix">"Layer: "</string>
     <string name="snackbar_new_message">New message</string>
-    <string name="snackbar_new_message_action">@string/show</string>
+    <string name="snackbar_new_message_action" translatable="false">@string/show</string>
 
     <!--Messages Fragment-->
-    <string name="message_list_item_time">HH:mm:ss</string>
+    <string name="message_list_item_time" translatable="false">HH:mm:ss</string>
     <string name="vector_layer_alert_message_template">Vector layer %1$s updated</string>
     <string name="text_message_hint">Type a message</string>
     <string name="send_image_button_description">Send Image</string>
@@ -109,11 +109,11 @@
     <string name="menu_action_send_quadrilateral_title">Send Quadrilateral</string>
     <string name="menu_action_draw_geometry_title">Draw Geometry</string>
     <string name="menu_action_measure_distance_title">Measure Distance</string>
-    <string name="draw_action_positive_button">@string/send</string>
+    <string name="draw_action_positive_button" translatable="false">@string/send</string>
 
     <!--Send Quadrilateral-->
     <string name="send_quadrilateral_action_description">Fill quadrilateral points</string>
-    <string name="send_quadrilateral_action_show_button">@string/show</string>
+    <string name="send_quadrilateral_action_show_button" translatable="false">@string/show</string>
     <string name="send_quadrilateral_invalid_input_message">Invalid input</string>
     <string name="send_quadrilateral_lnglatpicker1_label">Point 1</string>
     <string name="send_quadrilateral_lnglatpicker2_label">Point 2</string>
@@ -134,7 +134,7 @@
     <string name="send">send</string>
     <string name="show">show</string>
     <string name="error">error</string>
-    <string name="geo_dd_format">N: %1$.6f E: %2$.6f</string>
+    <string name="geo_dd_format" translatable="false">N: %1$.6f E: %2$.6f</string>
 
     <!--Name Generator-->
     <string-array name="name_generator_animals">
