Go-To action added. 1. Added a go-to boom-button 2. Refactored LongLatPicker - supports horizontal and vertical orientation, actually extends LinearLayout, lat/long text validation and OnValidStateChangedListener

--- a/app/src/debug/res/values/strings.xml
+++ b/app/src/debug/res/values/strings.xml
@@ -120,7 +120,7 @@
 
     <!-- Goto Dialog-->
     <string name="dialog_go_to_title">GoTo Dialog</string>
-    <string name="dialog_go_to_positive_button">Send Me</string>
+    <string name="dialog_go_to_positive_button">Go to</string>
     <string name="dialog_go_to_negative_button">Cancel</string>
     <string name="dialog_go_to_latitude_text">Latitude:</string>
     <string name="dialog_go_to_altitude_text">Altitude:</string>
