--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,7 +140,7 @@
 
     <!-- Goto Dialog-->
     <string name="dialog_go_to_title">GoTo Dialog</string>
-    <string name="dialog_go_to_positive_button">Send Me</string>
+    <string name="dialog_go_to_positive_button">Go to</string>
     <string name="dialog_go_to_negative_button">Cancel</string>
     <string name="dialog_go_to_latitude_text">Latitude:</string>
     <string name="dialog_go_to_altitude_text">Altitude:</string>
@@ -326,6 +326,7 @@
     <string name="menu_action_send_quadrilateral_title">Send Quadrilateral</string>
     <string name="menu_action_draw_geometry_title">Draw Geometry</string>
     <string name="menu_action_measure_distance_title">Measure Distance</string>
+    <string name="menu_action_go_to_location_title">Go To Location</string>
     <string name="draw_action_positive_button">send</string>
     <string name="send_quadrilateral_action_description">Fill quadrilateral points</string>
     <string name="send_quadrilateral_action_show_button">show</string>
