--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,6 +127,10 @@
     <string name="dialog_go_to_title">GoTo Dialog</string>
     <string name="dialog_go_to_positive_button">Go to</string>
 
+    <!--Measure Distance-->
+    <string name="measure_distance_title">Measure distance</string>
+
+
     <!--Long Lat Picker-->
     <string name="horizontal_long_lat_picker_long_hint">Longitude</string>
     <string name="horizontal_long_lat_picker_lat_hint">Latitude</string>
