Refactored Navigator class methods to be instance-methods. It's now injected where needed.
ActionActivity will now create a fragment according to the intent extra sent to it.
Generated all the MeasureFragment/ViewModel classes.
 Working on the action XML file ATM

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -337,4 +337,5 @@
     <string name="send_quadrilateral_lnglatpicker2_label">Point 2</string>
     <string name="send_quadrilateral_lnglatpicker3_label">Point 3</string>
     <string name="send_quadrilateral_lnglatpicker4_label">Point 4</string>
+    <string name="measure_distance_title">Measure distance</string>
 </resources>
