--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -4,7 +4,7 @@
     <string name="add_description">הוסף תיאור</string>
     <string name="alert_no_3g_network">אין קליטת דור 3</string>
     <string name="alert_no_gps_signal">אין קליטת GPS</string>
-    <string name="alert_no_network">אין קליטה סלולרית</string>
+    <string name="alert_no_network">אין חיבור לשרת</string>
     <string name="alert_notification_new_alert">התראה חדשה!</string>
     <string name="alert_notification_new_vector_layer">עדכון שכבה ווקטורית</string>
     <string name="dialog_gps_disabled_description">נדמה כי מקלט הGPS במכשירך כבוי. האם ברצונך להדליקו?</string>
