--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Gimelגימל</string>
+    <string name="app_name" translatable="false">Gimelגימל</string>
 
     <!--Activities-->
     <string name="activity_launcher_title" translatable="false">@string/app_name</string>
