--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -60,4 +60,5 @@
     <string name="dialog_go_to_long_lat_label">יעד</string>
     <string name="measure_distance_format">מרחק: %1$.2f מטר</string>
     <string name="measure_distance_title">מדידת מרחק</string>
+    <string name="unknown_location">מיקום אינו ידוע</string>
 </resources>
