--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,7 +130,6 @@
     <!--Measure Distance-->
     <string name="measure_distance_title">Measure distance</string>
 
-
     <!--Long Lat Picker-->
     <string name="horizontal_long_lat_picker_long_hint">Longitude</string>
     <string name="horizontal_long_lat_picker_lat_hint">Latitude</string>
@@ -150,6 +149,7 @@
     <string name="geo_dd_format">N: %1$.6f - E: %2$.6f</string>
     <string name="measure_distance_format">Distance: %1$.2f (m)</string>
     <string name="dialog_go_to_long_lat_label">Destination</string>
+    <string name="unknown_location">Unknown location</string>
 
     <!--Name Generator-->
     <string-array name="name_generator_animals">
