--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,6 +133,8 @@
     <!--Long Lat Picker-->
     <string name="horizontal_long_lat_picker_long_hint">Longitude</string>
     <string name="horizontal_long_lat_picker_lat_hint">Latitude</string>
+    <string name="horizontal_long_lat_picker_x_hint">X coordinate</string>
+    <string name="horizontal_long_lat_picker_y_hint">Y coordinate</string>
 
     <!--Geo Message Types-->
     <string-array name="geo_location_types">
@@ -147,6 +149,7 @@
     <string name="show">show</string>
     <string name="error">error</string>
     <string name="geo_dd_format">N: %1$.6f - E: %2$.6f</string>
+    <string name="utm_36N_format">36N: %1$.0fm E , %2$.0fm N</string>
     <string name="measure_distance_format">Distance: %1$.2f (m)</string>
     <string name="dialog_go_to_long_lat_label">Destination</string>
     <string name="unknown_location">Unknown location</string>
