Send geometry view completed. Attached newly action fragment to boom menu's button click. Added onTap gesture listener to OnMapGestureListener and  needed adjustments around code for it.
SendGeometryViewModel is reacting appropriately to ui events.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,6 +100,7 @@
 
   <!--Send Geometry -->
   <string name="send_geometry_title">Send Geometry</string>
+  <string name="send_geometry_toolbar_title">Send Geometry</string>
 
   <!--Long Lat Picker-->
   <string name="horizontal_long_lat_picker_long_hint">Longitude</string>
