--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,10 @@
   <string name="text_message_hint">Type a message</string>
   <string name="send_image_button_description">Send Image</string>
 
+  <!--Common messages -->
+  <string name="invalid_input_message">Invalid input</string>
+
+
   <!--Draw Actions-->
   <string name="menu_action_send_quadrilateral_title">Send Quadrilateral</string>
   <string name="menu_action_draw_geometry_title">Draw Geometry</string>
@@ -84,7 +88,7 @@
   <!--Send Quadrilateral-->
   <string name="send_quadrilateral_action_description">Fill quadrilateral points</string>
   <string name="send_quadrilateral_action_show_button" translatable="false">@string/show</string>
-  <string name="send_quadrilateral_invalid_input_message">Invalid input</string>
+  <string name="send_quadrilateral_invalid_input_message" translatable="false">@string/invalid_input_message</string>
   <string name="send_quadrilateral_lnglatpicker1_label">Point 1</string>
   <string name="send_quadrilateral_lnglatpicker2_label">Point 2</string>
   <string name="send_quadrilateral_lnglatpicker3_label">Point 3</string>
@@ -100,6 +104,7 @@
 
   <!--Send Geometry -->
   <string name="send_geometry_toolbar_title">Send Geometry</string>
+  <string name="send_geometry_invalid_input_message" translatable="false">@string/send_quadrilateral_invalid_input_message</string>
 
   <!--Long Lat Picker-->
   <string name="horizontal_long_lat_picker_long_hint">Longitude</string>
