Extracted MainActivity menu handling to its dedicated class - MainOptionsMenu. Added support for a new action on debug mode - Clear VL Cache This action deletes all the vector layers form the disk and notifies through a toast to the user (developer) if the operation succeeded / failed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,6 +131,9 @@
   <string name="dialog_go_to_long_lat_label">Destination</string>
   <string name="unknown_location">Unknown location</string>
   <string name="menu_use_utm_title">Use UTM</string>
+  <string name="menu_clear_vl_cache_title" translatable="false">Clear VL Cache</string>
+  <string name="clear_cache_successful_message" translatable="false">All layers successfully deleted</string>
+  <string name="clear_cache_failure_message" translatable="false">Couldn\'t delete all layers</string>
 
   <!--Name Generator-->
   <string-array name="name_generator_animals" translatable="false">
