--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,9 +122,14 @@
   <string name="dialog_go_to_long_lat_label">Destination</string>
   <string name="unknown_location">Unknown location</string>
   <string name="menu_use_utm_title">Use UTM</string>
+
+  <!--Developer options-->
   <string name="menu_clear_vl_cache_title" translatable="false">Clear VL Cache</string>
+  <string name="menu_change_username_title" translatable="false">Change username</string>
   <string name="clear_cache_successful_message" translatable="false">All layers successfully deleted</string>
   <string name="clear_cache_failure_message" translatable="false">Couldn\'t delete all layers</string>
+  <string name="alert_dialog_change_username_title" translatable="false">Change username</string>
+  <string name="alert_dialog_change_username_positive_button_text" translatable="false">OK</string>
 
   <!--Name Generator-->
   <string-array name="name_generator_animals" translatable="false">
