--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,6 +128,11 @@
   <string name="menu_change_username_title" translatable="false">Change username</string>
   <string name="clear_cache_successful_message" translatable="false">All layers successfully deleted</string>
   <string name="clear_cache_failure_message" translatable="false">Couldn\'t delete all layers</string>
+  <string name="change_server_menu_item_title" translatable="false">Dev %1$d</string>
+  <string-array name="change_server_menu_list_items">
+    <item>DEV 1</item>
+    <item>DEV 2</item>
+  </string-array>
 
   <!--Name Generator-->
   <string-array name="name_generator_animals" translatable="false">
