Added settings option to choose whether to notify all messages or only alerts (it's an old fashioned checkable item, when moving to the new settings activity this should be changed).

--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -67,4 +67,5 @@
   <string name="drawer_nav_bar_users_title">משתמשים</string>
   <string name="send_geometry_toolbar_title">שלח גיאומטריה</string>
   <string name="invalid_input_message">קלט לא תקין</string>
+  <string name="menu_only_alerts_title">התראות חשובות בלבד</string>
 </resources>
