--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -14,8 +14,8 @@
   <string name="dialog_set_username_title">הכנס שם משתמש</string>
   <string name="error">שגיאה</string>
   <string name="send">שלח</string>
-  <string name="horizontal_long_lat_picker_lat_hint">קו רוחב</string>
-  <string name="horizontal_long_lat_picker_long_hint">קו אורך</string>
+  <string name="lat_long_picker_lat_hint">קו רוחב</string>
+  <string name="lat_long_picker_long_hint">קו אורך</string>
   <string name="map_entity_details_container_title">פרטים: %1$s</string>
   <string name="menu_action_draw_geometry_title">צייר גאומטריה</string>
   <string name="menu_action_measure_distance_title">מדוד מרחק</string>
@@ -37,10 +37,10 @@
   <string name="send_image_button_description">שלח תמונה</string>
   <string name="send_quadrilateral_action_description">הזן נקודות מרובע</string>
   <string name="show">הצג</string>
-  <string name="send_quadrilateral_lnglatpicker1_label">נקודה 1</string>
-  <string name="send_quadrilateral_lnglatpicker2_label">נקודה 2</string>
-  <string name="send_quadrilateral_lnglatpicker3_label">נקודה 3</string>
-  <string name="send_quadrilateral_lnglatpicker4_label">נקודה 4</string>
+  <string name="send_quadrilateral_latlngpicker1_label">נקודה 1</string>
+  <string name="send_quadrilateral_latlngpicker2_label">נקודה 2</string>
+  <string name="send_quadrilateral_latlngpicker3_label">נקודה 3</string>
+  <string name="send_quadrilateral_latlngpicker4_label">נקודה 4</string>
   <string name="sensors_container_title">סנסורים</string>
   <string name="snackbar_new_message">הודעה חדשה</string>
   <string name="text_message_hint">הקלד הודעה</string>
@@ -57,12 +57,12 @@
   <string name="dialog_go_to_positive_button">עבור אל</string>
   <string name="dialog_go_to_title">חלונית מעבר לנ.צ.</string>
   <string name="menu_action_go_to_location_title">עבור לנ.צ.</string>
-  <string name="dialog_go_to_long_lat_label">יעד</string>
+  <string name="dialog_go_to_lat_long_label">יעד</string>
   <string name="measure_distance_format">מרחק: %1$.2f מטר</string>
   <string name="measure_distance_title">מדידת מרחק</string>
   <string name="unknown_location">מיקום אינו ידוע</string>
-  <string name="horizontal_long_lat_picker_x_hint">קואורדינטת X</string>
-  <string name="horizontal_long_lat_picker_y_hint">קואורדינטת Y</string>
+  <string name="lat_long_picker_x_hint">קואורדינטת X</string>
+  <string name="lat_long_picker_y_hint">קואורדינטת Y</string>
   <string name="menu_use_utm_title">השתמש במערכת UTM</string>
   <string name="drawer_nav_bar_users_title">משתמשים</string>
   <string name="send_geometry_toolbar_title">שלח גיאומטריה</string>
