--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,10 +90,10 @@
   <string name="send_quadrilateral_action_description">Fill quadrilateral points</string>
   <string name="send_quadrilateral_action_show_button" translatable="false">@string/show</string>
   <string name="send_quadrilateral_invalid_input_message" translatable="false">@string/invalid_input_message</string>
-  <string name="send_quadrilateral_lnglatpicker1_label">Point 1</string>
-  <string name="send_quadrilateral_lnglatpicker2_label">Point 2</string>
-  <string name="send_quadrilateral_lnglatpicker3_label">Point 3</string>
-  <string name="send_quadrilateral_lnglatpicker4_label">Point 4</string>
+  <string name="send_quadrilateral_latlngpicker1_label">Point 1</string>
+  <string name="send_quadrilateral_latlngpicker2_label">Point 2</string>
+  <string name="send_quadrilateral_latlngpicker3_label">Point 3</string>
+  <string name="send_quadrilateral_latlngpicker4_label">Point 4</string>
 
   <!-- Go to -->
   <string name="menu_action_go_to_location_title">Go To Location</string>
@@ -107,11 +107,11 @@
   <string name="send_geometry_toolbar_title">Send Geometry</string>
   <string name="send_geometry_invalid_input_message" translatable="false">@string/invalid_input_message</string>
 
-  <!--Long Lat Picker-->
-  <string name="horizontal_long_lat_picker_long_hint">Longitude</string>
-  <string name="horizontal_long_lat_picker_lat_hint">Latitude</string>
-  <string name="horizontal_long_lat_picker_x_hint">X coordinate</string>
-  <string name="horizontal_long_lat_picker_y_hint">Y coordinate</string>
+  <!--Lat Long Picker-->
+  <string name="lat_long_picker_long_hint">Longitude</string>
+  <string name="lat_long_picker_lat_hint">Latitude</string>
+  <string name="lat_long_picker_x_hint">X coordinate</string>
+  <string name="lat_long_picker_y_hint">Y coordinate</string>
 
   <!--Geo Message Types-->
   <string-array name="geo_location_types">
@@ -128,7 +128,7 @@
   <string name="geo_dd_format">N: %1$.6f - E: %2$.6f</string>
   <string name="utm_36N_format">36N: %1$.0fm E , %2$.0fm N</string>
   <string name="measure_distance_format">Distance: %1$.2f (m)</string>
-  <string name="dialog_go_to_long_lat_label">Destination</string>
+  <string name="dialog_go_to_lat_long_label">Destination</string>
   <string name="unknown_location">Unknown location</string>
   <string name="menu_use_utm_title">Use UTM</string>
 
