--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,14 @@
     </string>
   <string name="activity_action_draw_title" translatable="false">DrawActionActivity</string>
 
+  <!--Notifications-->
+  <string name="alert_notification_title">New Alert!</string>
+  <string name="alert_notification_summary">Alert</string>
+  <string name="alert_notification_text">You have a new alert!</string>
+  <string name="message_notification_title">New Message</string>
+  <string name="message_notification_summary">Message</string>
+  <string name="message_notification_text">New incoming message</string>
+
   <!--Drawer-->
   <string name="drawer_nav_bar_bubble_layers_title">Bubble Layers</string>
   <string name="drawer_nav_bar_layers_title">Static Layers</string>
