--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,6 +139,9 @@
   <!--Settings -->
   <string name="settings">Settings</string>
   <string name="menu_item_settings_title" translatable="false">@string/settings</string>
+  <string name="pref_general_about_key" translatable="false">about_key</string>
+  <string name="pref_general_summary_template">Version %1$s</string>
+
 
   <!-- Notifications settings -->
   <string name="pref_notifications_header_title">Notifications</string>
@@ -159,6 +162,7 @@
   <string name="message_notification_title">New Message</string>
   <string name="message_notification_summary">Message</string>
   <string name="message_notification_text">New incoming message</string>
+  <string name="pref_general_about_title">About</string>
 
   <!--Name Generator-->
   <string-array name="name_generator_animals" translatable="false">
