--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -77,5 +77,5 @@
   <string name="message_notification_text">הודעה נכנסת חדשה</string>
   <string name="message_notification_title">הודעה חדשה</string>
   <string name="pref_general_summary_template">גרסא %1$s</string>
-  <string name="pref_general_about_title">פרטים</string>
+  <string name="pref_general_about_title">אודות</string>
 </resources>
